--- a/package.json
+++ b/package.json
@@ -6,28 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "pnpm exec playwright test",
+    "test-report": "pnpm playwright show-report",
+    "test-with-report": "pnpm test && pnpm test-report"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
     "@vercel/analytics": "^1.0.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
     "tesseract.js": "^4.0.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-copy-to-clipboard": "^5.0.4"
+    "@axe-core/playwright": "^4.7.0",
+    "@playwright/test": "^1.33.0",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.39.0",
+    "postcss": "8.4.23",
+    "tailwindcss": "3.3.2"
   }
 }
