--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   "devDependencies": {
     "@axe-core/playwright": "^4.7.0",
     "@playwright/test": "^1.33.0",
-    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/jest": "^29.5.1",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
