--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@vercel/analytics": "^1.0.0",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.16",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -33,6 +34,7 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "8.4.23",
     "tailwindcss": "3.3.2"
   }
