--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.0.17",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@vercel/analytics": "^1.0.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
