--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write src",
     "test": "pnpm exec playwright test",
     "test-report": "pnpm playwright show-report",
     "test-with-report": "pnpm test && pnpm test-report"
@@ -41,6 +42,8 @@
     "eslint": "8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "3.3.2"
   }
 }
