--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
