--- a/package.json
+++ b/package.json
@@ -15,18 +15,28 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@next/mdx": "^13.4.5",
+    "@opentelemetry/api": "^1.4.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@tailwindcss/typography": "^0.5.9",
     "@vercel/analytics": "^1.0.0",
+    "contentlayer": "^0.3.3",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.240.0",
+    "markdown-wasm": "^1.2.0",
     "next": "13.3.4",
+    "next-contentlayer": "^0.3.3",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^0.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.7",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.13.1",
     "tesseract.js": "^4.0.4",
     "typescript": "5.0.4"
