--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write src",
-    "test": "pnpm exec playwright test",
-    "test-report": "pnpm playwright show-report",
-    "test-with-report": "pnpm test && pnpm test-report"
+    "jest": "jest",
+    "jest:coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -37,13 +36,12 @@
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.13.1",
-    "tesseract.js": "^4.0.4",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.7.0",
-    "@playwright/test": "^1.33.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -52,9 +50,13 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
