--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".contentlayer/generated"
-  ],
+, "jest.config.js"  ],
   "exclude": ["node_modules"]
 }
