--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.0.17",
     "@next/mdx": "^13.4.5",
     "@opentelemetry/api": "^1.4.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@vercel/analytics": "^1.0.0",
+    "clsx": "^1.2.1",
     "contentlayer": "^0.3.3",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
