--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 
 # production
 /build
+.contentlayer
+.vscode
 
 # misc
 .DS_Store
@@ -29,6 +31,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+.swc
 
 # typescript
 *.tsbuildinfo
