--- a/package.json
+++ b/package.json
@@ -7,25 +7,45 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "pnpm exec playwright test",
-    "test-report": "pnpm playwright show-report",
-    "test-with-report": "pnpm test && pnpm test-report"
+    "format": "prettier --write src",
+    "jest": "jest",
+    "jest:coverage": "jest --coverage"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@next/mdx": "^13.4.5",
+    "@opentelemetry/api": "^1.4.1",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@vercel/analytics": "^1.0.0",
+    "clsx": "^1.2.1",
+    "contentlayer": "^0.3.3",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.16",
+    "lucide-react": "^0.240.0",
+    "markdown-wasm": "^1.2.0",
     "next": "13.3.4",
+    "next-contentlayer": "^0.3.3",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "tesseract.js": "^4.0.4",
+    "react-wrap-balancer": "^0.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.7",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "tailwind-merge": "^1.13.1",
+    "tesseract.js": "^4.1.0",
+    "tocbot": "^4.21.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.7.0",
-    "@playwright/test": "^1.33.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
@@ -33,7 +53,14 @@
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "8.4.23",
-    "tailwindcss": "3.3.2"
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "3.3.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
