--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.8",
+    "prettier-eslint": "^15.0.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
